<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/top_description"
                android:textSize="36sp" />

            <Button
                android:id="@+id/show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:textSize="30sp" />

            <Button
                android:id="@+id/newItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newItem"
                android:textSize="30sp" />

            <Button
                android:id="@+id/changeCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeCount"
                android:textSize="30sp" />

            <Button
                android:id="@+id/deleteItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleteItem"
                android:textSize="30sp" />

            <Button
                android:id="@+id/record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/control_record"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>